--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-<h1>This is my homepage</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset = "UTF-8">
+    
+    <title>Edgar Barron's links</title>
+
+    <style>
+      * {
+        border:1px red dashed;
+      }
+    </style>
+
+  </head>
+  <body>
+    <div class= "main=container">
+      <div class= "image-row">
+        <img src="thumbnails/EdgarBarron-Headshot.jpg" alt="Edgar Barron headshot">
+      </div> <!-- image-row -->
+
+      <div class="name-row">
+        Edgar Barron
+      </div> <!-- name-row -->
+
+      <div class="social-icons-row">
+        <a href="https://github.com/erbarron95" target="_blank">
+          Github
+        </a>
+
+        <a href="https://www.linkedin.com/in/edgar-barron95" target="_blank">
+          LinkedIn
+        </a>
+      </div> <!--social-icons-row -->
+
+      <div class="link-row">
+        <div class="item">
+          <img src="">
+        </div>
+      </div> <!-- links-row -->
+
+    </div> <!-- main-container -->
+    
+  </body>
+</html>
