--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       * {
         border:1px red dashed;
       }
-    </style>
+    </style> <!--can erase later -->
 
   </head>
   <body>
@@ -39,6 +39,6 @@
       </div> <!-- links-row -->
 
     </div> <!-- main-container -->
-    
+
   </body>
 </html>
