--- a/index.html
+++ b/index.html
@@ -5,17 +5,13 @@
     
     <title>Edgar Barron's links</title>
 
-    <style>
-      * {
-        border:1px red dashed;
-      }
-    </style> <!--can erase later -->
+    <link href="styles.css" rel="stylesheet";
 
   </head>
   <body>
     <div class= "main=container">
       <div class= "image-row">
-        <img src="thumbnails/EdgarBarron-Headshot.jpg" alt="Edgar Barron headshot">
+        <img class="avatar-image" src="/thumbnails/EdgarBarron-Headshot.jpg" alt="Edgar Barron headshot">
       </div> <!-- image-row -->
 
       <div class="name-row">
@@ -30,11 +26,19 @@
         <a href="https://www.linkedin.com/in/edgar-barron95" target="_blank">
           LinkedIn
         </a>
+
+        <a>
+          Instragram
+        </a>
+
+        <a>
+          Twitter
+        </a>
       </div> <!--social-icons-row -->
 
       <div class="link-row">
         <div class="item">
-          <img src="">
+          <img class= "thumbnail" src="">
         </div>
       </div> <!-- links-row -->
 
