--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     
     <title>Edgar Barron's links</title>
 
-    <link href="styles.css" rel="stylesheet";
+    <link href="styles.css" rel="stylesheet">
 
   </head>
+
   <body>
     <div class= "main=container">
       <div class= "image-row">
@@ -38,8 +39,26 @@
 
       <div class="link-row">
         <div class="item">
-          <img class= "thumbnail" src="">
+          <img class= "thumbnail" src="/thumbnails/chess.jpg" alt="chess piece">
+          <a href="https://www.chess.com/lessons" target="blank">
+            Learn chess
+          </a>
         </div>
+
+        <div class="item">
+          <img class="thumbnail" src="/thumbnails/coding.jpg" alt="computer">
+          <a href="https://www.khanacademy.org/" target="blank">
+            Khan Academy
+          </a>
+        </div>
+
+        <div class="item">
+          <img class="thumbnail" src="/thumbnails/dog.jpg" alt="dog">
+          <a href="https://www.chicago.gov/city/en/depts/cacc.html" target="blank">
+            Chicago Pet Adoption
+          </a>
+        </div>
+
       </div> <!-- links-row -->
 
     </div> <!-- main-container -->
