--- a/index.html
+++ b/index.html
@@ -5,7 +5,45 @@
     
     <title>Edgar Barron's links</title>
 
-    <link href="styles.css" rel="stylesheet">
+    <style>
+      html{
+      min-height: 100%;
+      } 
+
+      body {
+        min-height: 100%;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        background: linear-gradient(180deg, #1f005c, #5b0060, #870160, #ac255e, #ca485c, #e16b5c, #f39060, #ffb56b);
+        color: rgba(255, 255, 255, 1.0);
+      }
+
+      a {
+        color:rgba(255, 255, 255, 1.0);
+      }
+
+      * {
+              border:1px red dashed;
+      }
+
+      .avatar-image {
+        width: 128px;
+        height: 128px;
+        object-fit: cover;
+        border-radius: 128px;
+      }
+
+      .thumbnail {
+        width: 48px;
+        height: 48px;
+        object-fit: cover;
+        border-radius: 48px;
+      }
+
+      .item {
+        background-color: rgba(149, 123, 173, 0.5);
+      }
+  </style>
 
   </head>
 
