--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html>
   <head>
     <meta charset = "UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/js/all.min.js"></script>
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     
     <title>Edgar Barron's links</title>
 
@@ -16,21 +29,24 @@
         padding-bottom: 40px;
         background: linear-gradient(180deg, #1f005c, #5b0060, #870160, #ac255e, #ca485c, #e16b5c, #f39060, #ffb56b);
         color: rgba(255, 255, 255, 1.0);
+        font-family: "Raleway";
       }
 
       a {
         color:rgba(255, 255, 255, 1.0);
+        text-decoration: none;
       }
 
-      * {
+      /* * {
               border:1px red dashed;
-      }
+      } 
+              */
 
       .avatar-image {
         width: 128px;
-        height: 128px;
+        height: 128x;
         object-fit: cover;
-        border-radius: 128px;
+        border-radius: 120px;
       }
 
       .thumbnail {
@@ -42,13 +58,49 @@
 
       .item {
         background-color: rgba(149, 123, 173, 0.5);
+        margin-bottom: 20px;
+        display: flex;
+        align-items: center;
+        border-radius: 1000px;
+        padding: 5px;
+        padding-right: 53px;
+        box-shadow: 4px 4px 10px 0px rgba(122,32,122,0.5);
+      }
+
+      .main-container {
+        max-width: 640px;
+        margin: auto;
+      }
+
+      .image-row {
+        margin-bottom: 20px;
+        text-align: center;
+      }
+
+      .name-row {
+        margin-bottom: 20px;
+        text-align: center;
+        font-family: "Playfair Display";
+        font-size: 24px;
+        font-weight: 900;
+      }
+
+      .social-icons-row {
+        margin-bottom: 20px;
+        display: flex;
+        justify-content: space-around;
+      }
+
+      .link-text{
+        text-align: center;
+        flex-grow: 1;
       }
   </style>
 
   </head>
 
   <body>
-    <div class= "main=container">
+    <div class= "main-container">
       <div class= "image-row">
         <img class="avatar-image" src="/thumbnails/EdgarBarron-Headshot.jpg" alt="Edgar Barron headshot">
       </div> <!-- image-row -->
@@ -59,40 +111,40 @@
 
       <div class="social-icons-row">
         <a href="https://github.com/erbarron95" target="_blank">
-          Github
+          <i class="fa-brands fa-github"></i>
         </a>
 
         <a href="https://www.linkedin.com/in/edgar-barron95" target="_blank">
-          LinkedIn
+          <i class="fa-brands fa-linkedin"></i>
         </a>
 
         <a>
-          Instragram
+          <i class="fa-brands fa-square-instagram"></i>
         </a>
 
         <a>
-          Twitter
+          <i class="fa-brands fa-x-twitter"></i>
         </a>
       </div> <!--social-icons-row -->
 
       <div class="link-row">
         <div class="item">
           <img class= "thumbnail" src="/thumbnails/chess.jpg" alt="chess piece">
-          <a href="https://www.chess.com/lessons" target="blank">
+          <a class="link-text" href="https://www.chess.com/lessons" target="blank">
             Learn chess
           </a>
         </div>
 
         <div class="item">
           <img class="thumbnail" src="/thumbnails/coding.jpg" alt="computer">
-          <a href="https://www.khanacademy.org/" target="blank">
+          <a  class="link-text" href="https://www.khanacademy.org/" target="blank">
             Khan Academy
           </a>
         </div>
 
         <div class="item">
           <img class="thumbnail" src="/thumbnails/dog.jpg" alt="dog">
-          <a href="https://www.chicago.gov/city/en/depts/cacc.html" target="blank">
+          <a  class="link-text" href="https://www.chicago.gov/city/en/depts/cacc.html" target="blank">
             Chicago Pet Adoption
           </a>
         </div>
