--- a/index.html
+++ b/index.html
@@ -37,16 +37,17 @@
         text-decoration: none;
       }
 
-      /* * {
+     /* * {
               border:1px red dashed;
       } 
               */
 
       .avatar-image {
         width: 128px;
-        height: 128x;
+        height: 128px;
         object-fit: cover;
-        border-radius: 120px;
+        border-radius: 128px;
+        object-position: 0px 25%;
       }
 
       .thumbnail {
@@ -89,6 +90,7 @@
         margin-bottom: 20px;
         display: flex;
         justify-content: space-around;
+        padding: 10px
       }
 
       .link-text{
@@ -106,7 +108,7 @@
       </div> <!-- image-row -->
 
       <div class="name-row">
-        Edgar Barron
+        Edgar R Barron
       </div> <!-- name-row -->
 
       <div class="social-icons-row">
@@ -146,6 +148,30 @@
           <img class="thumbnail" src="/thumbnails/dog.jpg" alt="dog">
           <a  class="link-text" href="https://www.chicago.gov/city/en/depts/cacc.html" target="blank">
             Chicago Pet Adoption
+          </a>
+        </div>
+
+        <div class="item">
+          <a class="link-text" href="https://www.airconsole.com/" target="blank">
+            Games
+          </a>
+        </div>
+
+        <div class="item">
+          <a class="link-text" href="https://seostudio.tools/" target="blank">
+            SEOStudio
+          </a>
+        </div>
+
+        <div class="item">
+          <a class="link-text" href="https://www.typingclub.com/" target="blank">
+            Typing
+          </a>
+        </div>
+
+        <div class="item">
+          <a class="link-text" href="https://www.ifixit.com/" target="blank">
+            IFIXIT
           </a>
         </div>
 
