--- a/index.html
+++ b/index.html
@@ -152,24 +152,28 @@
         </div>
 
         <div class="item">
+          <img class="thumbnail" src="/thumbnails/game.jpg" alt="gaming">
           <a class="link-text" href="https://www.airconsole.com/" target="blank">
             Games
           </a>
         </div>
 
         <div class="item">
+          <img class="thumbnail" src="/thumbnails/computer.jpg" alt="computer">
           <a class="link-text" href="https://seostudio.tools/" target="blank">
             SEOStudio
           </a>
         </div>
 
         <div class="item">
+          <img class="thumbnail" src="/thumbnails/typing.jpg" alt="keyboard">
           <a class="link-text" href="https://www.typingclub.com/" target="blank">
             Typing
           </a>
         </div>
 
         <div class="item">
+          <img class="thumbnail" src="/thumbnails/fixing.jpg" alt="fixing board"> 
           <a class="link-text" href="https://www.ifixit.com/" target="blank">
             IFIXIT
           </a>
